--- a/themes/raiser/sass/components/_fundraise-workflow.scss
+++ b/themes/raiser/sass/components/_fundraise-workflow.scss
@@ -4,7 +4,13 @@
   }
 }
 
-.page-redhen-campaign-add-general {
+.page-redhen-campaign-add-general,
+.page-redhen-campaign-page-add {
+
+  h2#page-title {
+    display: block; 
+  }
+
   legend {
     color: $black;
     font-size: 1.25em; 
@@ -13,6 +19,12 @@
   fieldset {
     border: none; 
     padding-left: 0;
+  }
+
+  .filter-wrapper, .filter-help {
+    float: none;
+    margin: 0;
+    padding: 0;
   }
 
   .field-name-redhen-campaign-goal {
@@ -32,7 +44,10 @@
       color: $black;
       font-size: em(12); 
     }
+
+    input { font-size: em(14); }
   }
+  
 
   .container-inline-date {
     .date-padding {
@@ -47,7 +62,11 @@
       font-size: em(16); 
     } 
 
-    input { font-size: em(18); }
+    .description {
+      color: black; 
+    }
+
+    input { font-size: 16px; }
   }
 
 }
