--- a/themes/raiser/sass/components/_campaign-list-item.scss
+++ b/themes/raiser/sass/components/_campaign-list-item.scss
@@ -8,33 +8,59 @@
     }
     
     .views-row {
-      @include medium {
-        display: inline-block;
-        margin-bottom: 2em;
-        min-height: em(300);
-        width: 31.33333%;  
-        float: left;
-        margin-right: 2%;
-        padding: 1em 0;
-      } 
-
       background: $white;
-      border-radius: 8px;
-      @include box-shadow(0 3px 5px $gray);
+      @include box-shadow(0 2px 5px $gray + 20);
       margin-bottom: 1em;
       padding-top: 1em;
       padding-bottom: 2em;
 
-      h2 {
-       text-align: left; 
-       font-size: em(18);
-       line-height: 1em;
-       margin-top: 0;
-       padding: 0 1em;
-
-        a { color: $primary; }
+      @include small {
+        float: left;
+        margin-right: 1%;
+        margin-left: 1%;
+        width: 48%; 
       }
 
+      @include medium {
+        display: inline-block;
+        margin-bottom: 2em;
+        margin-right: 1%;
+        margin-left: 1%;
+        min-height: em(300);
+        width: 31.33333%;  
+        float: left;
+        padding: 1em 0;
+      } 
+
+      @include large {
+        display: inline-block;
+        margin-bottom: 2em;
+        margin-right: 1%;
+        margin-left: 1%;
+        min-height: em(300);
+        width: 31.33333%;  
+        float: left;
+        padding: 1em 0;
+      } 
+
+
+      
+      // Campaign list title
+      .redhen_campaign_title {
+        font-family: $raiser-heading-font; 
+        text-align: left; 
+        line-height: 1em;
+        margin-bottom: 1em;
+        margin-top: 0;
+        padding: 0 1em;
+
+        a { 
+          color: $primary; 
+          font-size: em(18);
+        }
+      }
+      
+      // Campaign list image
       .field-name-field-banner-image {
         margin-bottom: 1em;
         padding: 0 1em; 
@@ -42,8 +68,8 @@
 
         img {
           border-radius: em(8);
-          border: 3px solid $white;
           @include box-shadow(0 3px 5px $gray);
+          width: 100%;
         }
       }
 
