--- a/themes/raiser/sass/components/_header.scss
+++ b/themes/raiser/sass/components/_header.scss
@@ -1,6 +1,6 @@
 #header {
   background: $white;
-  padding: 0.2em 0;
+  padding: 0.2em 1em;
   @include box-shadow($gray 0 2px 5px);
   
   #logo {
