--- a/themes/raiser/sass/layouts/_home.scss
+++ b/themes/raiser/sass/layouts/_home.scss
@@ -1,6 +1,7 @@
 body.front {
-  #content {
+  #main #content {
     border-bottom: 1px solid $primary;
     text-align: center; 
+    padding: 0 1em;
   }
 }
