--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -885,8 +885,9 @@ form a.button:hover {
     /* Span 1 column, starting in 5th column from left. */
   }
 }
-/* line 3, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign #content {
+/* line 4, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign #content,
+.page-redhen-campaign-edit #content {
   -webkit-box-shadow: 0 3px 5px #989898;
   -moz-box-shadow: 0 3px 5px #989898;
   box-shadow: 0 3px 5px #989898;
@@ -894,8 +895,9 @@ form a.button:hover {
   overflow: hidden;
   position: relative;
 }
-/* line 10, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign .main-content-wrapper {
+/* line 11, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign .main-content-wrapper,
+.page-redhen-campaign-edit .main-content-wrapper {
   float: left;
   width: 100%;
   margin-left: 0%;
@@ -903,20 +905,23 @@ form a.button:hover {
   background: white;
 }
 @media (min-width: 992px) {
-  /* line 10, ../sass/layouts/_campaign.scss */
-  .page-redhen-campaign .main-content-wrapper {
+  /* line 11, ../sass/layouts/_campaign.scss */
+  .page-redhen-campaign .main-content-wrapper,
+  .page-redhen-campaign-edit .main-content-wrapper {
     float: left;
     width: 66.66667%;
     margin-left: 0%;
     margin-right: -66.66667%;
   }
 }
-/* line 19, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign .main-content-wrapper .page__title {
+/* line 20, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign .main-content-wrapper .page__title,
+.page-redhen-campaign-edit .main-content-wrapper .page__title {
   display: none;
 }
-/* line 24, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign aside {
+/* line 25, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign aside,
+.page-redhen-campaign-edit aside {
   float: left;
   width: 100%;
   margin-left: 0%;
@@ -926,20 +931,23 @@ form a.button:hover {
   position: absolute;
 }
 @media (min-width: 992px) {
-  /* line 24, ../sass/layouts/_campaign.scss */
-  .page-redhen-campaign aside {
+  /* line 25, ../sass/layouts/_campaign.scss */
+  .page-redhen-campaign aside,
+  .page-redhen-campaign-edit aside {
     float: left;
     width: 33.33333%;
     margin-left: 66.66667%;
     margin-right: -100%;
   }
 }
-/* line 35, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign aside .block-bean {
+/* line 36, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign aside .block-bean,
+.page-redhen-campaign-edit aside .block-bean {
   border-bottom: 1px solid white;
 }
-/* line 41, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign .redhen-campaign-pages-button {
+/* line 42, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign .redhen-campaign-pages-button,
+.page-redhen-campaign-edit .redhen-campaign-pages-button {
   background: none;
   padding: 0.8em 1em;
   border-radius: 0.7em;
@@ -953,32 +961,38 @@ form a.button:hover {
   padding: 0.8em 5em;
 }
 /* line 50, ../sass/_mixins.scss */
-.page-redhen-campaign .redhen-campaign-pages-button:hover {
+.page-redhen-campaign .redhen-campaign-pages-button:hover,
+.page-redhen-campaign-edit .redhen-campaign-pages-button:hover {
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s;
 }
 /* line 77, ../sass/_mixins.scss */
-.page-redhen-campaign .redhen-campaign-pages-button:hover {
+.page-redhen-campaign .redhen-campaign-pages-button:hover,
+.page-redhen-campaign-edit .redhen-campaign-pages-button:hover {
   color: white;
   background: #ffab30;
 }
-/* line 47, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign .field-name-field-story-media img {
+/* line 48, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign .field-name-field-story-media img,
+.page-redhen-campaign-edit .field-name-field-story-media img {
   width: 100%;
 }
-/* line 51, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign iframe {
+/* line 52, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign iframe,
+.page-redhen-campaign-edit iframe {
   border: 3px solid white;
   -webkit-box-shadow: 0 3px 5px #989898;
   -moz-box-shadow: 0 3px 5px #989898;
   box-shadow: 0 3px 5px #989898;
   width: 100%;
 }
-/* line 59, ../sass/layouts/_campaign.scss */
+/* line 60, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-campaign-page-progress,
-.page-redhen-campaign #block-bean-campaign-progress {
+.page-redhen-campaign #block-bean-campaign-progress,
+.page-redhen-campaign-edit #block-bean-campaign-page-progress,
+.page-redhen-campaign-edit #block-bean-campaign-progress {
   background: #cdd6c5;
   color: #5e9733;
   position: absolute;
@@ -987,23 +1001,28 @@ form a.button:hover {
   padding-top: 2em;
   padding-bottom: 2em;
 }
-/* line 68, ../sass/layouts/_campaign.scss */
+/* line 69, ../sass/layouts/_campaign.scss */
 .page-redhen-campaign #block-bean-campaign-page-progress h2,
-.page-redhen-campaign #block-bean-campaign-progress h2 {
+.page-redhen-campaign #block-bean-campaign-progress h2,
+.page-redhen-campaign-edit #block-bean-campaign-page-progress h2,
+.page-redhen-campaign-edit #block-bean-campaign-progress h2 {
   display: none;
 }
-/* line 71, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign #block-bean-social-media-links {
+/* line 72, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign #block-bean-social-media-links,
+.page-redhen-campaign-edit #block-bean-social-media-links {
   padding-bottom: 1em;
   margin-left: auto;
   margin-right: auto;
 }
-/* line 76, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign #block-bean-social-media-links .field-item {
+/* line 77, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign #block-bean-social-media-links .field-item,
+.page-redhen-campaign-edit #block-bean-social-media-links .field-item {
   float: left;
 }
-/* line 81, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign #block-bean-social-media-links a {
+/* line 82, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign #block-bean-social-media-links a,
+.page-redhen-campaign-edit #block-bean-social-media-links a {
   background: url(../images/social.png) no-repeat;
   background-size: 214px;
   display: block;
@@ -1013,37 +1032,45 @@ form a.button:hover {
   text-indent: -9999px;
   margin-right: 0.3em;
 }
-/* line 91, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign #block-bean-social-media-links a.twitter-link {
+/* line 92, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign #block-bean-social-media-links a.twitter-link,
+.page-redhen-campaign-edit #block-bean-social-media-links a.twitter-link {
   background-position: 0 0;
 }
-/* line 94, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign #block-bean-social-media-links a.facebook-link {
+/* line 95, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign #block-bean-social-media-links a.facebook-link,
+.page-redhen-campaign-edit #block-bean-social-media-links a.facebook-link {
   background-position: -56px 0;
 }
-/* line 97, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign #block-bean-social-media-links a.linkedin-link {
+/* line 98, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign #block-bean-social-media-links a.linkedin-link,
+.page-redhen-campaign-edit #block-bean-social-media-links a.linkedin-link {
   background-position: -112px 0;
 }
-/* line 100, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign #block-bean-social-media-links a.googleplus-link {
+/* line 101, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign #block-bean-social-media-links a.googleplus-link,
+.page-redhen-campaign-edit #block-bean-social-media-links a.googleplus-link {
   background-position: -168px 0;
 }
-/* line 107, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign #block-bean-donation-matching {
+/* line 108, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign #block-bean-donation-matching,
+.page-redhen-campaign-edit #block-bean-donation-matching {
   margin-right: 1.2em;
   margin-top: 1em;
 }
-/* line 111, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign #block-bean-donation-matching .block-title {
+/* line 112, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign #block-bean-donation-matching .block-title,
+.page-redhen-campaign-edit #block-bean-donation-matching .block-title {
   display: none;
 }
-/* line 113, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign #block-bean-donation-matching .bean-promo {
+/* line 114, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign #block-bean-donation-matching .bean-promo,
+.page-redhen-campaign-edit #block-bean-donation-matching .bean-promo {
   text-align: center;
 }
-/* line 116, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign #block-bean-donation-matching .bean-promo img {
+/* line 117, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign #block-bean-donation-matching .bean-promo img,
+.page-redhen-campaign-edit #block-bean-donation-matching .bean-promo img {
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   -ms-border-radius: 8px;
@@ -1055,8 +1082,9 @@ form a.button:hover {
   border: 3px solid white;
   width: 100%;
 }
-/* line 123, ../sass/layouts/_campaign.scss */
-.page-redhen-campaign #block-bean-donation-matching .bean-promo p {
+/* line 124, ../sass/layouts/_campaign.scss */
+.page-redhen-campaign #block-bean-donation-matching .bean-promo p,
+.page-redhen-campaign-edit #block-bean-donation-matching .bean-promo p {
   margin: 1em 0;
 }
 
@@ -1841,26 +1869,40 @@ footer #colophon a:hover {
   background: #ffab30;
 }
 
-/* line 10, ../sass/components/_fundraise-workflow.scss */
+/* line 11, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general h2#page-title,
-.page-redhen-campaign-page-add h2#page-title {
+.page-redhen-campaign-page-add h2#page-title,
+.page-redhen-campaign-edit h2#page-title {
   display: block;
 }
-/* line 14, ../sass/components/_fundraise-workflow.scss */
+/* line 15, ../sass/components/_fundraise-workflow.scss */
+.page-redhen-campaign-add-general .tabs-primary,
+.page-redhen-campaign-page-add .tabs-primary,
+.page-redhen-campaign-edit .tabs-primary {
+  float: left;
+  width: 141.66667%;
+  margin-left: 0%;
+  margin-right: -141.66667%;
+  float: none;
+}
+/* line 20, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general legend,
-.page-redhen-campaign-page-add legend {
+.page-redhen-campaign-page-add legend,
+.page-redhen-campaign-edit legend {
   color: black;
   font-size: 1.25em;
 }
-/* line 19, ../sass/components/_fundraise-workflow.scss */
+/* line 25, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general fieldset,
-.page-redhen-campaign-page-add fieldset {
+.page-redhen-campaign-page-add fieldset,
+.page-redhen-campaign-edit fieldset {
   border: none;
   padding-left: 0;
 }
-/* line 24, ../sass/components/_fundraise-workflow.scss */
+/* line 30, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .fieldset-description,
-.page-redhen-campaign-page-add .fieldset-description {
+.page-redhen-campaign-page-add .fieldset-description,
+.page-redhen-campaign-edit .fieldset-description {
   -webkit-box-shadow: 0 3px 5px #989898;
   -moz-box-shadow: 0 3px 5px #989898;
   box-shadow: 0 3px 5px #989898;
@@ -1873,73 +1915,85 @@ footer #colophon a:hover {
   width: 25%;
 }
 @media (min-width: 992px) {
-  /* line 24, ../sass/components/_fundraise-workflow.scss */
+  /* line 30, ../sass/components/_fundraise-workflow.scss */
   .page-redhen-campaign-add-general .fieldset-description,
-  .page-redhen-campaign-page-add .fieldset-description {
+  .page-redhen-campaign-page-add .fieldset-description,
+  .page-redhen-campaign-edit .fieldset-description {
     display: block;
   }
 }
-/* line 37, ../sass/components/_fundraise-workflow.scss */
+/* line 43, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .fieldset-description .fieldset-description-title,
-.page-redhen-campaign-page-add .fieldset-description .fieldset-description-title {
+.page-redhen-campaign-page-add .fieldset-description .fieldset-description-title,
+.page-redhen-campaign-edit .fieldset-description .fieldset-description-title {
   display: block;
   font-size: 1.2em;
   margin-bottom: 1em;
   margin-top: 0.5em;
 }
-/* line 45, ../sass/components/_fundraise-workflow.scss */
+/* line 51, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .filter-wrapper, .page-redhen-campaign-add-general .filter-help,
 .page-redhen-campaign-page-add .filter-wrapper,
-.page-redhen-campaign-page-add .filter-help {
+.page-redhen-campaign-page-add .filter-help,
+.page-redhen-campaign-edit .filter-wrapper,
+.page-redhen-campaign-edit .filter-help {
   float: none;
   margin: 0;
   padding: 0;
 }
-/* line 51, ../sass/components/_fundraise-workflow.scss */
+/* line 57, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-name-redhen-campaign-goal,
-.page-redhen-campaign-page-add .field-name-redhen-campaign-goal {
+.page-redhen-campaign-page-add .field-name-redhen-campaign-goal,
+.page-redhen-campaign-edit .field-name-redhen-campaign-goal {
   padding-left: 0;
 }
-/* line 54, ../sass/components/_fundraise-workflow.scss */
+/* line 60, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-name-redhen-campaign-goal label,
-.page-redhen-campaign-page-add .field-name-redhen-campaign-goal label {
+.page-redhen-campaign-page-add .field-name-redhen-campaign-goal label,
+.page-redhen-campaign-edit .field-name-redhen-campaign-goal label {
   color: black;
   font-size: 0.875em;
 }
-/* line 59, ../sass/components/_fundraise-workflow.scss */
+/* line 65, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-name-redhen-campaign-goal .field-prefix,
-.page-redhen-campaign-page-add .field-name-redhen-campaign-goal .field-prefix {
+.page-redhen-campaign-page-add .field-name-redhen-campaign-goal .field-prefix,
+.page-redhen-campaign-edit .field-name-redhen-campaign-goal .field-prefix {
   background: #989898;
   display: none;
 }
-/* line 64, ../sass/components/_fundraise-workflow.scss */
+/* line 70, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-name-redhen-campaign-goal .description,
-.page-redhen-campaign-page-add .field-name-redhen-campaign-goal .description {
+.page-redhen-campaign-page-add .field-name-redhen-campaign-goal .description,
+.page-redhen-campaign-edit .field-name-redhen-campaign-goal .description {
   color: black;
   font-size: 0.75em;
 }
-/* line 69, ../sass/components/_fundraise-workflow.scss */
+/* line 75, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-name-redhen-campaign-goal input,
-.page-redhen-campaign-page-add .field-name-redhen-campaign-goal input {
+.page-redhen-campaign-page-add .field-name-redhen-campaign-goal input,
+.page-redhen-campaign-edit .field-name-redhen-campaign-goal input {
   font-size: 0.875em;
 }
-/* line 74, ../sass/components/_fundraise-workflow.scss */
+/* line 80, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .container-inline-date .date-padding,
-.page-redhen-campaign-page-add .container-inline-date .date-padding {
+.page-redhen-campaign-page-add .container-inline-date .date-padding,
+.page-redhen-campaign-edit .container-inline-date .date-padding {
   padding: 0;
 }
-/* line 79, ../sass/components/_fundraise-workflow.scss */
+/* line 85, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-datetime,
-.page-redhen-campaign-page-add .field-type-datetime {
+.page-redhen-campaign-page-add .field-type-datetime,
+.page-redhen-campaign-edit .field-type-datetime {
   float: left;
   width: 50%;
   margin-left: 0%;
   margin-right: -50%;
   margin-left: 0;
 }
-/* line 82, ../sass/components/_fundraise-workflow.scss */
+/* line 88, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-datetime#edit-field-end-date,
-.page-redhen-campaign-page-add .field-type-datetime#edit-field-end-date {
+.page-redhen-campaign-page-add .field-type-datetime#edit-field-end-date,
+.page-redhen-campaign-edit .field-type-datetime#edit-field-end-date {
   float: right;
   width: 50%;
   margin-right: 0%;
@@ -1947,39 +2001,46 @@ footer #colophon a:hover {
   font-size: 1em;
   margin-top: 0;
 }
-/* line 87, ../sass/components/_fundraise-workflow.scss */
+/* line 93, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-datetime label,
-.page-redhen-campaign-page-add .field-type-datetime label {
+.page-redhen-campaign-page-add .field-type-datetime label,
+.page-redhen-campaign-edit .field-type-datetime label {
   color: black;
   font-size: 1em;
 }
-/* line 92, ../sass/components/_fundraise-workflow.scss */
+/* line 98, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-datetime .description,
-.page-redhen-campaign-page-add .field-type-datetime .description {
+.page-redhen-campaign-page-add .field-type-datetime .description,
+.page-redhen-campaign-edit .field-type-datetime .description {
   color: black;
 }
-/* line 96, ../sass/components/_fundraise-workflow.scss */
+/* line 102, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-datetime input,
-.page-redhen-campaign-page-add .field-type-datetime input {
+.page-redhen-campaign-page-add .field-type-datetime input,
+.page-redhen-campaign-edit .field-type-datetime input {
   font-size: 16px;
 }
-/* line 100, ../sass/components/_fundraise-workflow.scss */
+/* line 106, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-image label,
-.page-redhen-campaign-page-add .field-type-image label {
+.page-redhen-campaign-page-add .field-type-image label,
+.page-redhen-campaign-edit .field-type-image label {
   float: left;
   margin-right: 0.5em;
 }
-/* line 104, ../sass/components/_fundraise-workflow.scss */
+/* line 110, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general .field-type-image .description,
-.page-redhen-campaign-page-add .field-type-image .description {
+.page-redhen-campaign-page-add .field-type-image .description,
+.page-redhen-campaign-edit .field-type-image .description {
   line-height: 1.7;
 }
-/* line 109, ../sass/components/_fundraise-workflow.scss */
+/* line 115, ../sass/components/_fundraise-workflow.scss */
 .page-redhen-campaign-add-general a.button,
-.page-redhen-campaign-page-add a.button {
+.page-redhen-campaign-page-add a.button,
+.page-redhen-campaign-edit a.button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  line-height: 1;
 }
 
 /* line 1, ../sass/components/_header.scss */
@@ -2960,7 +3021,7 @@ tr.selected td {
 /* line 803, ../sass/components/_misc.scss */
 .progress .filled {
   background-color: #0072b9;
-  background-image: url('../images/progress.gif?1414105081');
+  background-image: url('../images/progress.gif?1414450541');
 }
 
 /* line 1, ../sass/components/_progress-bar.scss */
