--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -1391,6 +1391,48 @@ body.front #main #content {
 }
 
 /* line 3, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .form-radios .form-item {
+  background: none;
+  padding: 0.8em 1em;
+  border-radius: 0.7em;
+  -webkit-box-shadow: 0 2px 3px #666666;
+  -moz-box-shadow: 0 2px 3px #666666;
+  box-shadow: 0 2px 3px #666666;
+  background: none;
+  border: 3px solid #5e9733;
+  box-shadow: none;
+  color: #5e9733;
+  display: inline-block;
+  cursor: pointer;
+}
+/* line 50, ../sass/_mixins.scss */
+.view-campaign-pages .form-radios .form-item:hover {
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+/* line 62, ../sass/_mixins.scss */
+.view-campaign-pages .form-radios .form-item:hover {
+  background: #5e9733;
+  border: 3px solid #90c965;
+  color: white;
+}
+/* line 7, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .form-radios .form-item input {
+  display: none;
+}
+/* line 10, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .form-radios .form-item label {
+  cursor: pointer;
+}
+/* line 13, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .form-radios .form-item.checked {
+  background: #5e9733;
+  border: 3px solid #90c965;
+  color: white;
+}
+/* line 20, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row {
   background: white;
   border-radius: 8px;
@@ -1402,7 +1444,7 @@ body.front #main #content {
   padding-bottom: 2em;
 }
 @media (min-width: 992px) {
-  /* line 3, ../sass/components/_campaign-team-individual-list.scss */
+  /* line 20, ../sass/components/_campaign-team-individual-list.scss */
   .view-campaign-pages .views-row {
     display: inline-block;
     margin-bottom: 2em;
@@ -1412,8 +1454,12 @@ body.front #main #content {
     margin-right: 2%;
     padding: 1em 0;
   }
+  /* line 29, ../sass/components/_campaign-team-individual-list.scss */
+  .view-campaign-pages .views-row:nth-child(3n+4) {
+    clear: both;
+  }
 }
-/* line 21, ../sass/components/_campaign-team-individual-list.scss */
+/* line 41, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row h2 {
   text-align: left;
   font-size: 1.125em;
@@ -1421,17 +1467,33 @@ body.front #main #content {
   margin-top: 0;
   padding: 0 1em;
 }
-/* line 28, ../sass/components/_campaign-team-individual-list.scss */
+/* line 48, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row h2 a {
   color: #5e9733;
 }
-/* line 31, ../sass/components/_campaign-team-individual-list.scss */
+/* line 50, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .redhen_campaign_page_team {
+  padding-left: 1em;
+}
+/* line 53, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .field-name-redhen-campaign-goal {
+  color: #5e9733;
+  font-size: 1.375em;
+  padding-left: 0.625em;
+  line-height: 1.6;
+}
+/* line 58, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .field-name-redhen-campaign-goal .rhc_progress {
+  display: inline;
+  font-size: 1.375em;
+}
+/* line 64, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row .redhen-contact-contact {
   padding: 0 1em;
   text-align: center;
   display: block;
 }
-/* line 36, ../sass/components/_campaign-team-individual-list.scss */
+/* line 69, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row .redhen-contact-contact img {
   border-radius: 0.5em;
   border: 3px solid white;
@@ -1440,13 +1502,13 @@ body.front #main #content {
   box-shadow: 0 3px 5px #989898;
   width: 97%;
 }
-/* line 46, ../sass/components/_campaign-team-individual-list.scss */
+/* line 79, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row .redhen_campaign_page_campaign,
 .view-campaign-pages .views-row .redhen_campaign_page_title {
   font-size: 1em;
   margin-left: 1em;
 }
-/* line 51, ../sass/components/_campaign-team-individual-list.scss */
+/* line 84, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row .clearfix:after {
   display: block !important;
 }
