--- a/themes/raiser/sass/components/_campaign-team-individual-list.scss
+++ b/themes/raiser/sass/components/_campaign-team-individual-list.scss
@@ -87,14 +87,15 @@
 
     .redhen-campaign-page-team {
       .field-name-field-logo {
-        width: em(60);
+        width: em(40);
         margin: 0 em(8) em(8) em(16);
+        position: absolute;
+        top: em(250);
       }
       .redhen_campaign_page_title {
-        position: absolute;
         line-height: 1.3;
-        left: em(66);
-        top: em(16);
+        margin: em(8) 0 em(16) em(66);
+        min-height: em(40);
         width: 65%;
       }
     }
