Updates to individual/team campaign pages

--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -1475,28 +1475,36 @@ body.front #main #content {
 /* line 51, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row .redhen_campaign_page_team {
   padding-left: 1em;
-  position: absolute;
-  bottom: 1em;
+  margin-top: 0.5em;
+  line-height: 1;
 }
-/* line 56, ../sass/components/_campaign-team-individual-list.scss */
+/* line 55, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .redhen_campaign_page_team .field-label {
+  width: 22%;
+}
+/* line 58, ../sass/components/_campaign-team-individual-list.scss */
+.view-campaign-pages .views-row .redhen_campaign_page_team .field-items {
+  width: 78%;
+}
+/* line 62, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row .field-name-redhen-campaign-goal {
   color: #5e9733;
   font-size: 1.375em;
   line-height: 1.6;
   padding-left: 0.625em;
 }
-/* line 61, ../sass/components/_campaign-team-individual-list.scss */
+/* line 67, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row .field-name-redhen-campaign-goal .rhc_progress {
   display: inline;
   font-size: 1em;
 }
-/* line 67, ../sass/components/_campaign-team-individual-list.scss */
+/* line 73, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row .redhen-contact-contact {
   display: block;
   padding: 0 1em;
   text-align: center;
 }
-/* line 72, ../sass/components/_campaign-team-individual-list.scss */
+/* line 78, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row .redhen-contact-contact img {
   border-radius: 0.5em;
   border: 3px solid white;
@@ -1505,17 +1513,18 @@ body.front #main #content {
   box-shadow: 0 3px 5px #989898;
   width: 97%;
 }
-/* line 82, ../sass/components/_campaign-team-individual-list.scss */
+/* line 88, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row .redhen_campaign_page_campaign,
 .view-campaign-pages .views-row .redhen_campaign_page_title {
   font-size: 1em;
   margin-left: 1em;
+  width: 80%;
 }
-/* line 89, ../sass/components/_campaign-team-individual-list.scss */
+/* line 96, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row .redhen-campaign-page-team .field-name-field-logo {
   margin: 0 0.5em 0.5em 1em;
 }
-/* line 91, ../sass/components/_campaign-team-individual-list.scss */
+/* line 98, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row .redhen-campaign-page-team .field-name-field-logo img {
   border-radius: 0.5em;
   border: 3px solid white;
@@ -1524,7 +1533,7 @@ body.front #main #content {
   box-shadow: 0 3px 5px #989898;
   width: 97%;
 }
-/* line 101, ../sass/components/_campaign-team-individual-list.scss */
+/* line 108, ../sass/components/_campaign-team-individual-list.scss */
 .view-campaign-pages .views-row .clearfix:after {
   display: block !important;
 }
@@ -3099,7 +3108,7 @@ tr.selected td {
 /* line 803, ../sass/components/_misc.scss */
 .progress .filled {
   background-color: #0072b9;
-  background-image: url('../images/progress.gif?1414450541');
+  background-image: url('../images/progress.gif?1414523030');
 }
 
 /* line 1, ../sass/components/_progress-bar.scss */
