--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -1327,6 +1327,8 @@ body.front #main #content {
   margin-bottom: 1em;
   padding-top: 1em;
   padding-bottom: 2em;
+  position: relative;
+  overflow: hidden;
 }
 @media (min-width: 768px) {
   /* line 10, ../sass/components/_campaign-list-item.scss */
@@ -1344,13 +1346,13 @@ body.front #main #content {
     margin-bottom: 2em;
     margin-right: 1%;
     margin-left: 1%;
-    min-height: 18.75em;
+    min-height: 21.25em;
     width: 31.33333%;
     float: left;
     padding: 1em 0;
   }
 }
-/* line 38, ../sass/components/_campaign-list-item.scss */
+/* line 40, ../sass/components/_campaign-list-item.scss */
 .front #block-views-campaigns-block .views-row .redhen_campaign_title {
   font-family: Georgia, "Times New Roman", serif;
   text-align: left;
@@ -1359,18 +1361,18 @@ body.front #main #content {
   margin-top: 0;
   padding: 0 1em;
 }
-/* line 46, ../sass/components/_campaign-list-item.scss */
+/* line 48, ../sass/components/_campaign-list-item.scss */
 .front #block-views-campaigns-block .views-row .redhen_campaign_title a {
   color: #5e9733;
   font-size: 1.125em;
 }
-/* line 53, ../sass/components/_campaign-list-item.scss */
+/* line 55, ../sass/components/_campaign-list-item.scss */
 .front #block-views-campaigns-block .views-row .field-name-field-banner-image {
   margin-bottom: 1em;
   padding: 0 1em;
   text-align: center;
 }
-/* line 58, ../sass/components/_campaign-list-item.scss */
+/* line 60, ../sass/components/_campaign-list-item.scss */
 .front #block-views-campaigns-block .views-row .field-name-field-banner-image img {
   border-radius: 0.5em;
   -webkit-box-shadow: 0 3px 5px #989898;
@@ -1378,16 +1380,63 @@ body.front #main #content {
   box-shadow: 0 3px 5px #989898;
   width: 100%;
 }
-/* line 65, ../sass/components/_campaign-list-item.scss */
+/* line 67, ../sass/components/_campaign-list-item.scss */
 .front #block-views-campaigns-block .views-row .field-name-redhen-campaign-goal {
   color: black;
   font-size: 1em;
 }
-/* line 72, ../sass/components/_campaign-list-item.scss */
+/* line 74, ../sass/components/_campaign-list-item.scss */
 .front #block-views-campaigns-block .views-row .rhc_progress {
   display: inline;
   font-size: 1em;
   color: #f8971c;
+}
+/* line 80, ../sass/components/_campaign-list-item.scss */
+.front #block-views-campaigns-block .views-row .redhen_campaign_join_link {
+  background: #f1f1f1;
+  margin-top: 1em;
+  overflow: hidden;
+  padding: 1em;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+/* line 89, ../sass/components/_campaign-list-item.scss */
+.front #block-views-campaigns-block .views-row .redhen_campaign_join_link div {
+  display: block;
+  float: none;
+  text-align: center;
+}
+/* line 95, ../sass/components/_campaign-list-item.scss */
+.front #block-views-campaigns-block .views-row .redhen_campaign_join_link a {
+  background: none;
+  padding: 0.8em 1em;
+  border-radius: 0.7em;
+  -webkit-box-shadow: 0 2px 3px #666666;
+  -moz-box-shadow: 0 2px 3px #666666;
+  box-shadow: 0 2px 3px #666666;
+  background: #f8971c;
+  border: 3px solid white;
+  color: white;
+  text-transform: uppercase;
+  padding: 0.8em 5em;
+  border: 2px solid white;
+  font-size: 0.875em;
+  padding: 0.5em;
+  text-align: center;
+  margin-right: 2em;
+}
+/* line 50, ../sass/_mixins.scss */
+.front #block-views-campaigns-block .views-row .redhen_campaign_join_link a:hover {
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+/* line 77, ../sass/_mixins.scss */
+.front #block-views-campaigns-block .views-row .redhen_campaign_join_link a:hover {
+  color: white;
+  background: #ffab30;
 }
 
 /* line 3, ../sass/components/_campaign-team-individual-list.scss */
@@ -3108,7 +3157,7 @@ tr.selected td {
 /* line 803, ../sass/components/_misc.scss */
 .progress .filled {
   background-color: #0072b9;
-  background-image: url('../images/progress.gif?1414523030');
+  background-image: url('../images/progress.gif?1414604356');
 }
 
 /* line 1, ../sass/components/_progress-bar.scss */
