--- a/themes/raiser/sass/components/_campaign-list-item.scss
+++ b/themes/raiser/sass/components/_campaign-list-item.scss
@@ -13,6 +13,8 @@
       margin-bottom: 1em;
       padding-top: 1em;
       padding-bottom: 2em;
+      position: relative;
+      overflow: hidden;
 
       @include small {
         float: left;
@@ -26,7 +28,7 @@
         margin-bottom: 2em;
         margin-right: 1%;
         margin-left: 1%;
-        min-height: em(300);
+        min-height: em(340);
         width: 31.33333%;  
         float: left;
         padding: 1em 0;
@@ -73,6 +75,31 @@
         display: inline; 
         font-size: em(16);
         color: $action;
+      }
+
+      .redhen_campaign_join_link {
+        background: $lt-gray;
+        margin-top: 1em;
+        overflow: hidden;
+        padding: 1em;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+
+        div { 
+          display: block;
+          float: none; 
+          text-align: center;
+        }
+        
+        a {
+          @include cta-btn; 
+          border: 2px solid $white;
+          font-size: em(14);
+          padding: 0.5em;
+          text-align: center;
+          margin-right: 2em;
+        } 
       }
 
     }
