--- a/themes/raiser/sass/base/_base.scss
+++ b/themes/raiser/sass/base/_base.scss
@@ -1,6 +1,6 @@
 @import "//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css";
 
-html, 
+html,
 body {
   height: 100%;
 }
@@ -24,8 +24,8 @@ h3 { font-size: 1.5em;  }
 
 h4 { font-size: 1.25em; }
 
-h5, h6 { 
-  font-size: 1.10em; 
+h5, h6 {
+  font-size: 1.10em;
   font-weight: bold;
 }
 
@@ -42,7 +42,7 @@ a, a:visited {
   text-decoration: none;
 
   &:hover {
-    color: $action - 20; 
+    color: $action - 20;
     @include transition(all 0.3s);
   }
 }
@@ -50,7 +50,7 @@ a, a:visited {
 // Forms
 form {
   label {
-    font-weight: normal; 
+    font-weight: normal;
   }
   input[type=text],
   input[type=password],
@@ -59,12 +59,12 @@ form {
     border: 2px solid $primary;
     border-radius: 4px;
     color: $primary;
-    padding: 0.5em; 
+    padding: 0.5em;
     width: 100%;
 
     &:focus {
       background: $lt-primary;
-      outline: none; 
+      outline: none;
       @include transition(all 0.3s);
     }
     &:blur {
@@ -72,12 +72,32 @@ form {
     }
   }
 
-  input[type=submit], 
+  input[type=submit],
   button {
     @include cta-btn;
   }
 
   a.button {
-    @include clear-btn;  
+    @include clear-btn;
   }
+
+  select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: transparent url(../images/select.png) no-repeat 97% center;
+    border-radius: 4px;
+    border: 2px solid $primary;
+    color: $primary;
+    font-size: 14px;
+    height: 36px;
+    line-height: 1;
+    padding: 5px 20px 5px 10px;
+    margin-top: 10px;
+  }
+
+  select, x:-moz-any-link, x:only-child{
+      background: none;
+  }
+
 }
